# ai-genai-llm-batching

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.yaml
llm_batching/: __init__.py  api_client.py  batch_processor.py  batch_queue.py  config.py  logger_setup.py  main.py  models.py  request_builder.py  response_handler.py
tests/: __init__.py  conftest.py  test_api_client.py  test_batch_processor.py  test_batch_queue.py  test_config.py  test_models.py  test_request_builder.py  test_response_handler.py
