[project]
name = "llm-batching"
version = "0.1.0"
description = "Educational project demonstrating LLM API request batching patterns"
authors = [
    {name = "Developer"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.0",
    "pyyaml>=6.0.2",
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0"
pytest-asyncio = ">=1.0.0"
pytest-cov = ">=6.0.0"
respx = ">=0.22.0"
ruff = ">=0.11.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.coverage.run]
source = ["llm_batching"]

[tool.coverage.report]
fail_under = 80

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
